// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checks icons match snapshots ColdHealthAlertAmberIcon matches expected snapshot 1`] = `
<div>
  <svg
    aria-hidden="true"
    data-testid="cold-alert-icon-amber"
    fill="none"
    height="45"
    viewBox="0 0 400 381"
    width="48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M200.404 11.0065C207.954 11.2062 215.121 15.5333 218.885 22.1793L386.879 338.013C393.466 351.194 384.023 369.612 368.037 370H32.0379C17.4302 369.645 6.02855 352.348 13.2066 338.013L181.201 22.1793C183.087 18.7139 185.875 15.8397 189.261 13.8697C192.647 11.8997 196.501 10.9094 200.404 11.0065Z"
      fill="white"
      fill-rule="evenodd"
      stroke="#F47738"
      stroke-linejoin="round"
      stroke-miterlimit="1.41421"
      stroke-width="22"
    />
    <title>
      Cold health alerts amber
    </title>
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-90 196.729 312.409)"
      width="142"
      x="196.729"
      y="312.409"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-50 197.229 193.858)"
      width="28"
      x="197.229"
      y="193.858"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(50 185.591 172.409)"
      width="28"
      x="185.591"
      y="172.409"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.64277 0.766059 0.76603 -0.642805 197.229 288.909)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.64277 -0.766059 -0.76603 -0.642805 185.591 310.359)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-180 271.409 245.089)"
      width="142"
      x="271.409"
      y="245.089"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-140 152.858 244.589)"
      width="28"
      x="152.858"
      y="244.589"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-40 131.409 256.227)"
      width="28"
      x="131.409"
      y="256.227"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.766059 -0.64277 -0.642805 -0.76603 247.909 244.589)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(-0.766059 -0.64277 -0.642805 0.76603 269.359 256.227)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-135 248.011 294.216)"
      width="142"
      x="248.011"
      y="294.216"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-95 164.537 210.034)"
      width="28"
      x="164.537"
      y="210.034"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(5 141.141 203.097)"
      width="28"
      x="141.141"
      y="203.097"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.996193 0.0871787 0.0871327 -0.996197 231.748 277.245)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(-0.0871787 -0.996193 -0.996197 0.0871327 238.687 300.642)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-45 147.602 289.011)"
      width="142"
      x="147.602"
      y="289.011"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-5 231.784 205.537)"
      width="28"
      x="231.784"
      y="205.537"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(95 238.722 182.141)"
      width="28"
      x="238.722"
      y="182.141"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(-0.0871787 0.996193 0.996197 0.0871327 164.573 272.748)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.996193 -0.0871787 -0.0871327 -0.996197 141.177 279.687)"
      width="28.0008"
    />
  </svg>
</div>
`;

exports[`Checks icons match snapshots ColdHealthAlertGreenIcon matches expected snapshot 1`] = `
<div>
  <svg
    aria-hidden="true"
    data-testid="cold-alert-icon-green"
    fill="none"
    height="45"
    viewBox="0 0 400 381"
    width="48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M200.404 11.0065C207.954 11.2062 215.121 15.5333 218.885 22.1793L386.879 338.013C393.466 351.194 384.023 369.612 368.037 370H32.0379C17.4302 369.645 6.02855 352.348 13.2066 338.013L181.201 22.1793C183.087 18.7139 185.875 15.8397 189.261 13.8697C192.647 11.8997 196.501 10.9094 200.404 11.0065Z"
      fill="white"
      fill-rule="evenodd"
      stroke="#00703C"
      stroke-linejoin="round"
      stroke-miterlimit="1.41421"
      stroke-width="22"
    />
    <title>
      Cold health alerts green
    </title>
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-90 196.729 312.409)"
      width="142"
      x="196.729"
      y="312.409"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-50 197.229 193.858)"
      width="28"
      x="197.229"
      y="193.858"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(50 185.591 172.409)"
      width="28"
      x="185.591"
      y="172.409"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.64277 0.766059 0.76603 -0.642805 197.229 288.909)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.64277 -0.766059 -0.76603 -0.642805 185.591 310.359)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-180 271.409 245.089)"
      width="142"
      x="271.409"
      y="245.089"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-140 152.858 244.589)"
      width="28"
      x="152.858"
      y="244.589"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-40 131.409 256.227)"
      width="28"
      x="131.409"
      y="256.227"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.766059 -0.64277 -0.642805 -0.76603 247.909 244.589)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(-0.766059 -0.64277 -0.642805 0.76603 269.359 256.227)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-135 248.011 294.216)"
      width="142"
      x="248.011"
      y="294.216"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-95 164.537 210.034)"
      width="28"
      x="164.537"
      y="210.034"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(5 141.141 203.097)"
      width="28"
      x="141.141"
      y="203.097"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.996193 0.0871787 0.0871327 -0.996197 231.748 277.245)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(-0.0871787 -0.996193 -0.996197 0.0871327 238.687 300.642)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-45 147.602 289.011)"
      width="142"
      x="147.602"
      y="289.011"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-5 231.784 205.537)"
      width="28"
      x="231.784"
      y="205.537"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(95 238.722 182.141)"
      width="28"
      x="238.722"
      y="182.141"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(-0.0871787 0.996193 0.996197 0.0871327 164.573 272.748)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.996193 -0.0871787 -0.0871327 -0.996197 141.177 279.687)"
      width="28.0008"
    />
  </svg>
</div>
`;

exports[`Checks icons match snapshots ColdHealthAlertRedIcon matches expected snapshot 1`] = `
<div>
  <svg
    aria-hidden="true"
    data-testid="cold-alert-icon-red"
    fill="none"
    height="45"
    viewBox="0 0 400 381"
    width="48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M200.404 11.0065C207.954 11.2062 215.121 15.5333 218.885 22.1793L386.879 338.013C393.466 351.194 384.023 369.612 368.037 370H32.0379C17.4302 369.645 6.02855 352.348 13.2066 338.013L181.201 22.1793C183.087 18.7139 185.875 15.8397 189.261 13.8697C192.647 11.8997 196.501 10.9094 200.404 11.0065Z"
      fill="white"
      fill-rule="evenodd"
      stroke="#D4351C"
      stroke-linejoin="round"
      stroke-miterlimit="1.41421"
      stroke-width="22"
    />
    <title>
      Cold health alerts red
    </title>
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-90 196.729 312.409)"
      width="142"
      x="196.729"
      y="312.409"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-50 197.229 193.858)"
      width="28"
      x="197.229"
      y="193.858"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(50 185.591 172.409)"
      width="28"
      x="185.591"
      y="172.409"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.64277 0.766059 0.76603 -0.642805 197.229 288.909)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.64277 -0.766059 -0.76603 -0.642805 185.591 310.359)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-180 271.409 245.089)"
      width="142"
      x="271.409"
      y="245.089"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-140 152.858 244.589)"
      width="28"
      x="152.858"
      y="244.589"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-40 131.409 256.227)"
      width="28"
      x="131.409"
      y="256.227"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.766059 -0.64277 -0.642805 -0.76603 247.909 244.589)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(-0.766059 -0.64277 -0.642805 0.76603 269.359 256.227)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-135 248.011 294.216)"
      width="142"
      x="248.011"
      y="294.216"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-95 164.537 210.034)"
      width="28"
      x="164.537"
      y="210.034"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(5 141.141 203.097)"
      width="28"
      x="141.141"
      y="203.097"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.996193 0.0871787 0.0871327 -0.996197 231.748 277.245)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(-0.0871787 -0.996193 -0.996197 0.0871327 238.686 300.642)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-45 147.602 289.011)"
      width="142"
      x="147.602"
      y="289.011"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-5 231.784 205.537)"
      width="28"
      x="231.784"
      y="205.537"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(95 238.722 182.141)"
      width="28"
      x="238.722"
      y="182.141"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(-0.0871787 0.996193 0.996197 0.0871327 164.573 272.748)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.996193 -0.0871787 -0.0871327 -0.996197 141.176 279.687)"
      width="28.0008"
    />
  </svg>
</div>
`;

exports[`Checks icons match snapshots ColdHealthAlertYellowIcon matches expected snapshot 1`] = `
<div>
  <svg
    aria-hidden="true"
    data-testid="cold-alert-icon-yellow"
    fill="none"
    height="45"
    viewBox="0 0 400 381"
    width="48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M200.404 11.0065C207.954 11.2062 215.121 15.5333 218.885 22.1793L386.879 338.013C393.466 351.194 384.023 369.612 368.037 370H32.0379C17.4302 369.645 6.02855 352.348 13.2066 338.013L181.201 22.1793C183.087 18.7139 185.875 15.8397 189.261 13.8697C192.647 11.8997 196.501 10.9094 200.404 11.0065Z"
      fill="white"
      fill-rule="evenodd"
      stroke="#FFDD00"
      stroke-linejoin="round"
      stroke-miterlimit="1.41421"
      stroke-width="22"
    />
    <title>
      Cold health alerts yellow
    </title>
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-90 196.729 312.409)"
      width="142"
      x="196.729"
      y="312.409"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-50 197.229 193.858)"
      width="28"
      x="197.229"
      y="193.858"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(50 185.591 172.409)"
      width="28"
      x="185.591"
      y="172.409"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.64277 0.766059 0.76603 -0.642805 197.229 288.909)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.64277 -0.766059 -0.76603 -0.642805 185.591 310.359)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-180 271.409 245.089)"
      width="142"
      x="271.409"
      y="245.089"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-140 152.858 244.589)"
      width="28"
      x="152.858"
      y="244.589"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-40 131.409 256.227)"
      width="28"
      x="131.409"
      y="256.227"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.766059 -0.64277 -0.642805 -0.76603 247.909 244.589)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(-0.766059 -0.64277 -0.642805 0.76603 269.359 256.227)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-135 248.011 294.216)"
      width="142"
      x="248.011"
      y="294.216"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-95 164.537 210.034)"
      width="28"
      x="164.537"
      y="210.034"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(5 141.141 203.097)"
      width="28"
      x="141.141"
      y="203.097"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.996193 0.0871787 0.0871327 -0.996197 231.748 277.245)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(-0.0871787 -0.996193 -0.996197 0.0871327 238.687 300.642)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-45 147.602 289.011)"
      width="142"
      x="147.602"
      y="289.011"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(-5 231.784 205.537)"
      width="28"
      x="231.784"
      y="205.537"
    />
    <rect
      fill="#00A4CD"
      height="7"
      rx="3.5"
      transform="rotate(95 238.722 182.141)"
      width="28"
      x="238.722"
      y="182.141"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(-0.0871787 0.996193 0.996197 0.0871327 164.573 272.748)"
      width="28.0008"
    />
    <rect
      fill="#00A4CD"
      height="7.00014"
      rx="3.50007"
      transform="matrix(0.996193 -0.0871787 -0.0871327 -0.996197 141.177 279.687)"
      width="28.0008"
    />
  </svg>
</div>
`;

exports[`Checks icons match snapshots HeatHealthAlertAmberIcon matches expected snapshot 1`] = `
<div>
  <svg
    aria-hidden="true"
    data-testid="heat-alert-icon-amber"
    fill="none"
    height="45"
    viewBox="0 0 400 381"
    width="48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M200.404 11.0065C207.954 11.2062 215.121 15.5333 218.885 22.1793L386.879 338.013C393.466 351.194 384.023 369.612 368.037 370H32.0379C17.4302 369.645 6.02855 352.348 13.2066 338.013L181.201 22.1793C183.087 18.7139 185.875 15.8397 189.261 13.8697C192.647 11.8997 196.501 10.9094 200.404 11.0065Z"
      fill="white"
      fill-rule="evenodd"
      stroke="#F47738"
      stroke-linejoin="round"
      stroke-miterlimit="1.41421"
      stroke-width="22"
    />
    <title>
      Heat health alerts amber
    </title>
    <mask
      fill="white"
      id="path-2-inside-1_0_1"
    >
      <path
        clip-rule="evenodd"
        d="M205.405 126C195.162 126 186.859 134.304 186.859 144.547V269.111C173.865 275.919 165 289.534 165 305.219C165 327.717 183.238 345.956 205.737 345.956C228.235 345.956 246.473 327.717 246.473 305.219C246.473 289.268 237.306 275.459 223.952 268.772V144.547C223.952 134.304 215.649 126 205.405 126Z"
        fill-rule="evenodd"
      />
    </mask>
    <path
      d="M186.859 269.111L190.107 275.312L193.859 273.347V269.111H186.859ZM223.952 268.772H216.952V273.095L220.818 275.031L223.952 268.772ZM193.859 144.547C193.859 138.17 199.028 133 205.405 133V119C191.296 119 179.859 130.438 179.859 144.547H193.859ZM193.859 269.111V144.547H179.859V269.111H193.859ZM172 305.219C172 292.239 179.329 280.959 190.107 275.312L183.61 262.911C168.402 270.878 158 286.828 158 305.219H172ZM205.737 338.956C187.104 338.956 172 323.851 172 305.219H158C158 331.583 179.372 352.956 205.737 352.956V338.956ZM239.473 305.219C239.473 323.851 224.369 338.956 205.737 338.956V352.956C232.101 352.956 253.473 331.583 253.473 305.219H239.473ZM220.818 275.031C231.894 280.577 239.473 292.02 239.473 305.219H253.473C253.473 286.517 242.718 270.34 227.086 262.513L220.818 275.031ZM216.952 144.547V268.772H230.952V144.547H216.952ZM205.405 133C211.783 133 216.952 138.17 216.952 144.547H230.952C230.952 130.438 219.515 119 205.405 119V133Z"
      fill="black"
      mask="url(#path-2-inside-1_0_1)"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="254.502"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="13.2477"
      x="229.251"
      y="235.956"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="217.409"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="13.2477"
      x="229.251"
      y="198.862"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="180.315"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="13.2477"
      x="229.251"
      y="161.769"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="143.222"
    />
    <path
      clip-rule="evenodd"
      d="M206 186C203.239 186 201 188.239 201 191V282.138C190.284 284.329 182.222 293.811 182.222 305.175C182.222 318.162 192.75 328.69 205.737 328.69C218.723 328.69 229.251 318.162 229.251 305.175C229.251 293.998 221.453 284.642 211 282.252V191C211 188.239 208.761 186 206 186Z"
      fill="#F47738"
      fill-rule="evenodd"
    />
    <path
      clip-rule="evenodd"
      d="M182 151.083C162.715 151.083 147.082 166.716 147.082 186C147.082 205.285 162.715 220.918 182 220.918V151.083Z"
      fill="#FFCB00"
      fill-rule="evenodd"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      width="5.27059"
      x="176.729"
      y="130"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      transform="rotate(-33.725 149.698 140.182)"
      width="5.27059"
      x="149.698"
      y="140.182"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      transform="rotate(-60.8515 131.929 160.956)"
      width="5.27059"
      x="131.929"
      y="160.956"
    />
    <rect
      fill="#FFCB00"
      height="19.1053"
      rx="2.63529"
      transform="matrix(1 0 0 -1 176.729 242.073)"
      width="5.27059"
    />
    <rect
      fill="#FFCB00"
      height="19.1055"
      rx="2.63527"
      transform="matrix(0.83172 0.555195 0.55522 -0.831703 149.698 231.89)"
      width="5.27054"
    />
    <rect
      fill="#FFCB00"
      height="19.1057"
      rx="2.63523"
      transform="matrix(0.487087 0.873353 0.873367 -0.487063 131.929 211.117)"
      width="5.27046"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      transform="rotate(-90 126 188.635)"
      width="5.27059"
      x="126"
      y="188.635"
    />
  </svg>
</div>
`;

exports[`Checks icons match snapshots HeatHealthAlertGreenIcon matches expected snapshot 1`] = `
<div>
  <svg
    aria-hidden="true"
    data-testid="heat-alert-icon-green"
    fill="none"
    height="45"
    viewBox="0 0 400 381"
    width="48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M200.404 11.0065C207.954 11.2062 215.121 15.5333 218.885 22.1793L386.879 338.013C393.466 351.194 384.023 369.612 368.037 370H32.0379C17.4302 369.645 6.02855 352.348 13.2066 338.013L181.201 22.1793C183.087 18.7139 185.875 15.8397 189.261 13.8697C192.647 11.8997 196.501 10.9094 200.404 11.0065Z"
      fill="white"
      fill-rule="evenodd"
      stroke="#00703C"
      stroke-linejoin="round"
      stroke-miterlimit="1.41421"
      stroke-width="22"
    />
    <title>
      Heat health alerts green
    </title>
    <mask
      fill="white"
      id="path-2-inside-1_0_1"
    >
      <path
        clip-rule="evenodd"
        d="M205.405 126C195.162 126 186.859 134.304 186.859 144.547V269.111C173.865 275.919 165 289.534 165 305.219C165 327.717 183.238 345.956 205.737 345.956C228.235 345.956 246.473 327.717 246.473 305.219C246.473 289.268 237.306 275.459 223.952 268.772V144.547C223.952 134.304 215.649 126 205.405 126Z"
        fill-rule="evenodd"
      />
    </mask>
    <path
      d="M186.859 269.111L190.107 275.312L193.859 273.347V269.111H186.859ZM223.952 268.772H216.952V273.095L220.818 275.031L223.952 268.772ZM193.859 144.547C193.859 138.17 199.028 133 205.405 133V119C191.296 119 179.859 130.438 179.859 144.547H193.859ZM193.859 269.111V144.547H179.859V269.111H193.859ZM172 305.219C172 292.239 179.329 280.959 190.107 275.312L183.61 262.911C168.402 270.878 158 286.828 158 305.219H172ZM205.737 338.956C187.104 338.956 172 323.851 172 305.219H158C158 331.583 179.372 352.956 205.737 352.956V338.956ZM239.473 305.219C239.473 323.851 224.369 338.956 205.737 338.956V352.956C232.101 352.956 253.473 331.583 253.473 305.219H239.473ZM220.818 275.031C231.894 280.577 239.473 292.02 239.473 305.219H253.473C253.473 286.517 242.718 270.34 227.086 262.513L220.818 275.031ZM216.952 144.547V268.772H230.952V144.547H216.952ZM205.405 133C211.783 133 216.952 138.17 216.952 144.547H230.952C230.952 130.438 219.515 119 205.405 119V133Z"
      fill="black"
      mask="url(#path-2-inside-1_0_1)"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="254.502"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="13.2477"
      x="229.251"
      y="235.956"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="217.409"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="13.2477"
      x="229.251"
      y="198.862"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="180.315"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="13.2477"
      x="229.251"
      y="161.769"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="143.222"
    />
    <path
      clip-rule="evenodd"
      d="M206 247C203.239 247 201 249.239 201 252V282.138C190.284 284.329 182.222 293.811 182.222 305.175C182.222 318.162 192.75 328.69 205.737 328.69C218.723 328.69 229.251 318.162 229.251 305.175C229.251 293.998 221.453 284.642 211 282.252V252C211 249.239 208.761 247 206 247Z"
      fill="#00703C"
      fill-rule="evenodd"
    />
    <path
      clip-rule="evenodd"
      d="M182 151.083C162.715 151.083 147.082 166.716 147.082 186C147.082 205.285 162.715 220.918 182 220.918V151.083Z"
      fill="#FFCB00"
      fill-rule="evenodd"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      width="5.27059"
      x="176.729"
      y="130"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      transform="rotate(-33.725 149.698 140.182)"
      width="5.27059"
      x="149.698"
      y="140.182"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      transform="rotate(-60.8515 131.929 160.956)"
      width="5.27059"
      x="131.929"
      y="160.956"
    />
    <rect
      fill="#FFCB00"
      height="19.1053"
      rx="2.63529"
      transform="matrix(1 0 0 -1 176.729 242.073)"
      width="5.27059"
    />
    <rect
      fill="#FFCB00"
      height="19.1055"
      rx="2.63527"
      transform="matrix(0.83172 0.555195 0.55522 -0.831703 149.698 231.89)"
      width="5.27054"
    />
    <rect
      fill="#FFCB00"
      height="19.1057"
      rx="2.63523"
      transform="matrix(0.487087 0.873353 0.873367 -0.487063 131.929 211.117)"
      width="5.27046"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      transform="rotate(-90 126 188.635)"
      width="5.27059"
      x="126"
      y="188.635"
    />
  </svg>
</div>
`;

exports[`Checks icons match snapshots HeatHealthAlertRedIcon matches expected snapshot 1`] = `
<div>
  <svg
    aria-hidden="true"
    data-testid="heat-alert-icon-red"
    fill="none"
    height="45"
    viewBox="0 0 400 381"
    width="48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M200.404 11.0065C207.954 11.2062 215.121 15.5333 218.885 22.1793L386.879 338.013C393.466 351.194 384.023 369.612 368.037 370H32.0379C17.4302 369.645 6.02855 352.348 13.2066 338.013L181.201 22.1793C183.087 18.7139 185.875 15.8397 189.261 13.8697C192.647 11.8997 196.501 10.9094 200.404 11.0065Z"
      fill="white"
      fill-rule="evenodd"
      stroke="#D4351C"
      stroke-linejoin="round"
      stroke-miterlimit="1.41421"
      stroke-width="22"
    />
    <title>
      Heat health alerts red
    </title>
    <mask
      fill="white"
      id="path-2-inside-1_0_1"
    >
      <path
        clip-rule="evenodd"
        d="M205.405 126C195.162 126 186.859 134.304 186.859 144.547V269.111C173.865 275.919 165 289.534 165 305.219C165 327.717 183.238 345.956 205.737 345.956C228.235 345.956 246.473 327.717 246.473 305.219C246.473 289.268 237.306 275.459 223.952 268.772V144.547C223.952 134.304 215.649 126 205.405 126Z"
        fill-rule="evenodd"
      />
    </mask>
    <path
      d="M186.859 269.111L190.107 275.312L193.859 273.347V269.111H186.859ZM223.952 268.772H216.952V273.095L220.818 275.031L223.952 268.772ZM193.859 144.547C193.859 138.17 199.028 133 205.405 133V119C191.296 119 179.859 130.438 179.859 144.547H193.859ZM193.859 269.111V144.547H179.859V269.111H193.859ZM172 305.219C172 292.239 179.329 280.959 190.107 275.312L183.61 262.911C168.402 270.878 158 286.828 158 305.219H172ZM205.737 338.956C187.104 338.956 172 323.851 172 305.219H158C158 331.583 179.372 352.956 205.737 352.956V338.956ZM239.473 305.219C239.473 323.851 224.369 338.956 205.737 338.956V352.956C232.101 352.956 253.473 331.583 253.473 305.219H239.473ZM220.818 275.031C231.894 280.577 239.473 292.02 239.473 305.219H253.473C253.473 286.517 242.718 270.34 227.086 262.513L220.818 275.031ZM216.952 144.547V268.772H230.952V144.547H216.952ZM205.405 133C211.783 133 216.952 138.17 216.952 144.547H230.952C230.952 130.438 219.515 119 205.405 119V133Z"
      fill="black"
      mask="url(#path-2-inside-1_0_1)"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="254.502"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="13.2477"
      x="229.251"
      y="235.956"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="217.409"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="13.2477"
      x="229.251"
      y="198.862"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="180.315"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="13.2477"
      x="229.251"
      y="161.769"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="143.222"
    />
    <path
      clip-rule="evenodd"
      d="M205.737 143.222C202.993 143.222 200.769 145.446 200.769 148.19V282.186C190.168 284.466 182.222 293.893 182.222 305.175C182.222 318.162 192.75 328.69 205.737 328.69C218.723 328.69 229.251 318.162 229.251 305.175C229.251 293.893 221.306 284.466 210.705 282.186V148.19C210.705 145.446 208.48 143.222 205.737 143.222Z"
      fill="#D4351C"
      fill-rule="evenodd"
    />
    <path
      clip-rule="evenodd"
      d="M182 151.083C162.716 151.083 147.082 166.716 147.082 186C147.082 205.285 162.716 220.918 182 220.918V151.083Z"
      fill="#FFCB00"
      fill-rule="evenodd"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      width="5.27059"
      x="176.729"
      y="130"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      transform="rotate(-33.725 149.698 140.182)"
      width="5.27059"
      x="149.698"
      y="140.182"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      transform="rotate(-60.8515 131.929 160.956)"
      width="5.27059"
      x="131.929"
      y="160.956"
    />
    <rect
      fill="#FFCB00"
      height="19.1053"
      rx="2.63529"
      transform="matrix(1 0 0 -1 176.729 242.073)"
      width="5.27059"
    />
    <rect
      fill="#FFCB00"
      height="19.1055"
      rx="2.63527"
      transform="matrix(0.83172 0.555195 0.55522 -0.831703 149.698 231.89)"
      width="5.27054"
    />
    <rect
      fill="#FFCB00"
      height="19.1057"
      rx="2.63523"
      transform="matrix(0.487087 0.873353 0.873367 -0.487063 131.929 211.117)"
      width="5.27046"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      transform="rotate(-90 126 188.635)"
      width="5.27059"
      x="126"
      y="188.635"
    />
  </svg>
</div>
`;

exports[`Checks icons match snapshots HeatHealthAlertYellowIcon matches expected snapshot 1`] = `
<div>
  <svg
    aria-hidden="true"
    data-testid="heat-alert-icon-yellow"
    fill="none"
    height="45"
    viewBox="0 0 400 381"
    width="48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M200.404 11.0065C207.954 11.2062 215.121 15.5333 218.885 22.1793L386.879 338.013C393.466 351.194 384.023 369.612 368.037 370H32.0379C17.4302 369.645 6.02855 352.348 13.2066 338.013L181.201 22.1793C183.087 18.7139 185.875 15.8397 189.261 13.8697C192.647 11.8997 196.501 10.9094 200.404 11.0065Z"
      fill="white"
      fill-rule="evenodd"
      stroke="#FFDD00"
      stroke-linejoin="round"
      stroke-miterlimit="1.41421"
      stroke-width="22"
    />
    <title>
      Heat health alerts yellow
    </title>
    <mask
      fill="white"
      id="path-2-inside-1_0_1"
    >
      <path
        clip-rule="evenodd"
        d="M205.405 126C195.162 126 186.859 134.304 186.859 144.547V269.111C173.865 275.919 165 289.534 165 305.219C165 327.717 183.238 345.956 205.737 345.956C228.235 345.956 246.473 327.717 246.473 305.219C246.473 289.268 237.306 275.459 223.952 268.772V144.547C223.952 134.304 215.649 126 205.405 126Z"
        fill-rule="evenodd"
      />
    </mask>
    <path
      d="M186.859 269.111L190.107 275.312L193.859 273.347V269.111H186.859ZM223.952 268.772H216.952V273.095L220.818 275.031L223.952 268.772ZM193.859 144.547C193.859 138.17 199.028 133 205.405 133V119C191.296 119 179.859 130.438 179.859 144.547H193.859ZM193.859 269.111V144.547H179.859V269.111H193.859ZM172 305.219C172 292.239 179.329 280.959 190.107 275.312L183.61 262.911C168.402 270.878 158 286.828 158 305.219H172ZM205.737 338.956C187.104 338.956 172 323.851 172 305.219H158C158 331.583 179.372 352.956 205.737 352.956V338.956ZM239.473 305.219C239.473 323.851 224.369 338.956 205.737 338.956V352.956C232.101 352.956 253.473 331.583 253.473 305.219H239.473ZM220.818 275.031C231.894 280.577 239.473 292.02 239.473 305.219H253.473C253.473 286.517 242.718 270.34 227.086 262.513L220.818 275.031ZM216.952 144.547V268.772H230.952V144.547H216.952ZM205.405 133C211.783 133 216.952 138.17 216.952 144.547H230.952C230.952 130.438 219.515 119 205.405 119V133Z"
      fill="black"
      mask="url(#path-2-inside-1_0_1)"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="254.502"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="13.2477"
      x="229.251"
      y="235.956"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="217.409"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="13.2477"
      x="229.251"
      y="198.862"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="180.315"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="13.2477"
      x="229.251"
      y="161.769"
    />
    <rect
      fill="black"
      height="5.29908"
      rx="2.64954"
      width="22.5211"
      x="229.251"
      y="143.222"
    />
    <path
      clip-rule="evenodd"
      d="M206 247C203.239 247 201 249.239 201 252V282.138C190.284 284.329 182.222 293.811 182.222 305.175C182.222 318.162 192.75 328.69 205.737 328.69C218.723 328.69 229.251 318.162 229.251 305.175C229.251 293.998 221.453 284.642 211 282.252V252C211 249.239 208.761 247 206 247Z"
      fill="#FFDD00"
      fill-rule="evenodd"
    />
    <path
      clip-rule="evenodd"
      d="M182 151.083C162.715 151.083 147.082 166.716 147.082 186C147.082 205.285 162.715 220.918 182 220.918V151.083Z"
      fill="#FFCB00"
      fill-rule="evenodd"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      width="5.27059"
      x="176.729"
      y="130"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      transform="rotate(-33.725 149.698 140.182)"
      width="5.27059"
      x="149.698"
      y="140.182"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      transform="rotate(-60.8515 131.929 160.956)"
      width="5.27059"
      x="131.929"
      y="160.956"
    />
    <rect
      fill="#FFCB00"
      height="19.1053"
      rx="2.63529"
      transform="matrix(1 0 0 -1 176.729 242.073)"
      width="5.27059"
    />
    <rect
      fill="#FFCB00"
      height="19.1055"
      rx="2.63527"
      transform="matrix(0.83172 0.555195 0.55522 -0.831703 149.698 231.89)"
      width="5.27054"
    />
    <rect
      fill="#FFCB00"
      height="19.1057"
      rx="2.63523"
      transform="matrix(0.487087 0.873353 0.873367 -0.487063 131.929 211.117)"
      width="5.27046"
    />
    <rect
      fill="#FFCB00"
      height="19.1059"
      rx="2.63529"
      transform="rotate(-90 126 188.635)"
      width="5.27059"
      x="126"
      y="188.635"
    />
  </svg>
</div>
`;
